--- a/Revision/package.json
+++ b/Revision/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "ts": "^0.2.2",
     "typescript": "^5.9.2"
